--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -3,12 +3,12 @@ name: Build, Push to ECR, and Deploy MySQL and Web App to EC2
 on:
   push:
     branches:
-      - main  
+      - main  # Adjust if you're using a different branch
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: dev  
+    environment: dev  # Specify the environment
 
     steps:
       # Step 1: Checkout the repository code
@@ -30,22 +30,22 @@ jobs:
         run: |
           docker build -t mysql-image -f mysql.Dockerfile .
 
-      # Step 4: Tag and Push the MySQL Docker image
+      # Step 4: Tag and Push the MySQL Docker image to the `ecr_for_assignment1` repository
       - name: Tag and Push MySQL Image to ECR
         run: |
-          docker tag mysql-image:latest 251298034216.dkr.ecr.us-east-1.amazonaws.com/mysql-image:latest
-          docker push 251298034216.dkr.ecr.us-east-1.amazonaws.com/mysql-image:latest
+          docker tag mysql-image:latest 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:mysql-image
+          docker push 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:mysql-image
 
       # Step 5: Build the Web App Docker image
       - name: Build Web App Docker Image
         run: |
           docker build -t webapp-image -f Dockerfile .
 
-      # Step 6: Tag and Push the Web App Docker image
+      # Step 6: Tag and Push the Web App Docker image to the `ecr_for_assignment1` repository
       - name: Tag and Push Web App Image to ECR
         run: |
-          docker tag webapp-image:latest 251298034216.dkr.ecr.us-east-1.amazonaws.com/webapp-image:latest
-          docker push 251298034216.dkr.ecr.us-east-1.amazonaws.com/webapp-image:latest
+          docker tag webapp-image:latest 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:webapp-image
+          docker push 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:webapp-image
 
       # Step 7: Deploy MySQL and Web App Images to EC2 with Docker Network
       - name: Deploy to EC2
@@ -61,16 +61,16 @@ jobs:
             docker login --username AWS --password $(aws ecr get-login-password --region $AWS_REGION) 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com
 
             # Step 3: Pull MySQL Image from ECR and Run it
-            docker pull 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/mysql-image:latest
+            docker pull 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/ecr_for_assignment1:mysql-image
             docker stop mysql-container || true
             docker rm mysql-container || true
-            docker run -d --name mysql-container --network app-network -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=employees mysql-image:latest
+            docker run -d --name mysql-container --network app-network -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=employees 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/ecr_for_assignment1:mysql-image
 
             # Step 4: Pull Web App Image from ECR and Run it
-            docker pull 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/webapp-image:latest
+            docker pull 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/ecr_for_assignment1:webapp-image
             docker stop webapp-container || true
             docker rm webapp-container || true
-            docker run -d --name webapp-container --network app-network -p 80:80 webapp-image:latest
+            docker run -d --name webapp-container --network app-network -p 80:80 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/ecr_for_assignment1:webapp-image
 
             # Step 5: Verify both containers are running and reachable
             docker ps
