--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -53,7 +53,10 @@ jobs:
           AWS_REGION: us-east-1
           EC2_IP: 3.85.45.147  # Your EC2 instance IP address
         run: |
-          ssh -i ${{ secrets.EC2_PRIVATE_KEY }} -o StrictHostKeyChecking=no ec2-user@${{ env.EC2_IP }} << 'EOF'
+          echo "${{ secrets.EC2_PRIVATE_KEY }}" > private_key.pem
+          chmod 600 private_key.pem
+          
+          ssh -i private_key.pem -o StrictHostKeyChecking=no ec2-user@${{ env.EC2_IP }} << 'EOF'
             # Step 1: Create a common Docker network
             docker network create app-network || true
 
