--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -47,7 +47,7 @@ jobs:
           docker tag webapp-image:latest 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:webapp-image
           docker push 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:webapp-image
 
-      # Step 7: Deploy MySQL and Web App Images to EC2 with Docker Network
+            # Step 7: Deploy MySQL and Web App Images to EC2 with Docker Network
       - name: Deploy to EC2
         env:
           AWS_REGION: us-east-1
@@ -57,24 +57,28 @@ jobs:
           chmod 600 private_key.pem
           
           ssh -i private_key.pem -o StrictHostKeyChecking=no ec2-user@${{ env.EC2_IP }} << 'EOF'
-            # Step 1: Create a common Docker network
+            # Step 1: Add ec2-user to the Docker group and restart Docker
+            sudo usermod -aG docker ec2-user
+            sudo systemctl restart docker
+
+            # Step 2: Create a common Docker network
             docker network create app-network || true
 
-            # Step 2: Log in to AWS ECR
-            docker login --username AWS --password $(aws ecr get-login-password --region $AWS_REGION) 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com
+            # Step 3: Log in to AWS ECR
+            aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 251298034216.dkr.ecr.us-east-1.amazonaws.com
 
-            # Step 3: Pull MySQL Image from ECR and Run it
-            docker pull 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/ecr_for_assignment1:mysql-image
+            # Step 4: Pull MySQL Image from ECR and Run it
+            docker pull 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:mysql-image
             docker stop mysql-container || true
             docker rm mysql-container || true
-            docker run -d --name mysql-container --network app-network -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=employees 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/ecr_for_assignment1:mysql-image
+            docker run -d --name mysql-container --network app-network -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=employees 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:mysql-image
 
-            # Step 4: Pull Web App Image from ECR and Run it
-            docker pull 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/ecr_for_assignment1:webapp-image
+            # Step 5: Pull Web App Image from ECR and Run it
+            docker pull 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:webapp-image
             docker stop webapp-container || true
             docker rm webapp-container || true
-            docker run -d --name webapp-container --network app-network -p 80:80 251298034216.dkr.ecr.$AWS_REGION.amazonaws.com/ecr_for_assignment1:webapp-image
+            docker run -d --name webapp-container --network app-network -p 80:80 251298034216.dkr.ecr.us-east-1.amazonaws.com/ecr_for_assignment1:webapp-image
 
-            # Step 5: Verify both containers are running and reachable
+            # Step 6: Verify both containers are running and reachable
             docker ps
           EOF
